@@ -10,6 +10,8 @@ JFwknop - 1.2.0
       + Automatic resolution is used by default, *-R* option from fwknop, rather
         than *source*.
     * Load ~/.fwknoprc file at startup - Closes #17
+    * JFwknop configuration file is renamed from config.properties to
+      .jfwknoprc and is created in user home directory - Closes #13
 
 JFwknop - 1.1.0 - 02/10/2016
 
